--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
                                 class="inline-block text-pink-800 font-semibold hover:text-black hover:underline mx-2"
                                 href="https://www.markusantonwolf.com/en/blog/alpine-js"
                                 target="_blank"
-                                >REAL LIVE</a
+                                >REAL LIFE</a
                             >
                         </p>
                     </div>
