--- a/public/index.html
+++ b/public/index.html
@@ -109,37 +109,9 @@
                                 class="w-full"
                             />
                         </div>
-                        <p class="pb-4">
+                        <p class="text-center pb-4">
                             TA StylesPLUGINS stands for light-weight, responsive and mobile first. All plugins are based
                             on Tailwind CSS and Alpine JS. All are 100% customizable with endless animation options.
-                        </p>
-                        <p class="pb-4">
-                            <a
-                                href="https://github.com/markusantonwolf/ta-gallery"
-                                target="_blank"
-                                class="text-pink-800 hover:text-black hover:underline font-semibold"
-                                >TA-Gallery</a
-                            >
-                            - A mobile first image gallery based on Tailwind CSS and Alpine JS - light-weight & responsive.
-                        </p>
-                        <p class="pb-4">
-                            <a
-                                href="https://github.com/markusantonwolf/ta-pagination"
-                                target="_blank"
-                                class="text-pink-800 hover:text-black hover:underline font-semibold"
-                                >TA-Pagination</a
-                            >
-                            - A mobile first pagination for content, based on Alpine JS and Tailwind CSS - light-weight & responsive.
-                        </p>
-                        <p class="pb-4">
-                            <a
-                                href="https://github.com/markusantonwolf/ta-youtube"
-                                target="_blank"
-                                class="text-pink-800 hover:text-black hover:underline font-semibold"
-                                >TA-YouTube</a
-                            >
-                            - A mobile first YouTube video wrapper with auto playback and
-                            aspect ratio for the video player - light-weight & responsive.
                         </p>
                     </div>
                 </div>
