Added new background image class

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
                                 x-show="!active"
                             >
                                 <img
-                                    class="absolute inset-0 w-full h-full object-cover ta-youtube-anim ta-youtube-anim-flight z-0"
+                                    class="ta-youtube-background ta-youtube-anim ta-youtube-anim-flight z-0"
                                     src="https://picsum.photos/id/10/1400/700"
                                     alt="Background Image"
                                     title="Background Image"
@@ -116,7 +116,7 @@
                                 x-show="!active"
                             >
                                 <img
-                                    class="absolute inset-0 w-full h-full object-cover ta-youtube-anim ta-youtube-anim-flight z-0"
+                                    class="ta-youtube-background ta-youtube-anim ta-youtube-anim-flight z-0"
                                     src="https://picsum.photos/id/10/1400/700"
                                     alt="Background Image"
                                     title="Background Image"
