Added aspect ratio class for tests

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
                     </div>
                     <div class="my-24">
                         <div
-                            class="ta-youtube ta-youtube-perspective border bg-gray-800 rounded-lg shadow-xl overflow-hidden"
+                            class="ta-youtube ta-youtube-aspect-hd border bg-gray-800 rounded-lg shadow-xl overflow-hidden"
                             x-data="taYoutube()"
                             x-init="init('2ux2H_Iddvc', {remember:'false',autoplay: 'true',start_at: 10,end_at:220})"
                         >
@@ -101,7 +101,7 @@
                     </div>
                     <div class="my-24">
                         <div
-                            class="ta-youtube ta-youtube-perspective border bg-gray-800 rounded-lg shadow-xl overflow-hidden"
+                            class="ta-youtube ta-youtube-aspect-wide border bg-gray-800 rounded-lg shadow-xl overflow-hidden"
                             x-data="taYoutube()"
                             x-init="init()"
                             data-id="51018360"
